--- a/package.json
+++ b/package.json
@@ -1,44 +1,28 @@
 {
-  "name": "sails-hook-winston-logger",
+  "name": "@bscheuch/sails-hook-winston-logger",
   "version": "0.0.1",
-  "description": "A custom Sails.js hook to add support for Winston logging",
+  "description": "Fork of sails-hook-winston-logger for sailsjs 0.12",
   "main": "lib/logger.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
   "scripts": {
     "test": "grunt test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/redcon-bscheuch/sails-hook-winston-logger.git"
+    "url": "git+https://github.com/redcon-bscheuch/sails-hook-winston-logger.git"
   },
   "keywords": [
     "sailsjs",
     "winston",
-    "logger",
-    "aws",
-    "cloudwatch",
-    "node",
-    "logging",
-    "sails"
+    "sails@0.12"
   ],
   "author": "Björn Scheuch",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/redcon-bscheuch/sails-hook-winston-logger/issues"
   },
-  "homepage": "https://github.com/redcon-bscheuch/sails-hook-winston-logger",
-  "dependencies": {
-    "lodash": "^3.9.3",
-    "mkdirp": "^0.5.1",
-    "winston": "^1.0.0",
-    "winston-cloudwatch": "^0.3.0"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-mocha-test": "^0.12.7",
-    "mocha": "^2.2.5",
-    "sails": "^0.12.0"
-  },
-  "sails": {
-    "isHook": true
-  }
+  "homepage": "https://github.com/redcon-bscheuch/sails-hook-winston-logger#readme"
 }
