new Package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bscheuch/sails-hook-winston-logger",
-  "version": "0.0.1e",
+  "version": "0.0.2",
   "description": "Fork of sails-hook-winston-logger for sailsjs 0.12",
   "main": "lib/logger.js",
   "directories": {
