--- a/package.json
+++ b/package.json
@@ -1,43 +1,69 @@
 {
-  "name": "@bscheuch/sails-hook-winston-logger",
-  "version": "0.0.2",
-  "description": "Fork of sails-hook-winston-logger for sailsjs 0.12",
-  "main": "lib/logger.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
-  "scripts": {
-    "test": "grunt test"
-  },
-  "repository": {
+  "_from": "git+https://github.com/haenjes-bscheuch/sails-hook-winston-logger.git",
+  "_id": "@bscheuch/sails-hook-winston-logger@0.0.2",
+  "_inBundle": false,
+  "_integrity": "",
+  "_location": "/@bscheuch/sails-hook-winston-logger",
+  "_phantomChildren": {},
+  "_requested": {
     "type": "git",
-    "url": "git+https://github.com/redcon-bscheuch/sails-hook-winston-logger.git"
+    "raw": "https://github.com/haenjes-bscheuch/sails-hook-winston-logger",
+    "rawSpec": "https://github.com/haenjes-bscheuch/sails-hook-winston-logger",
+    "saveSpec": "git+https://github.com/haenjes-bscheuch/sails-hook-winston-logger.git",
+    "fetchSpec": "https://github.com/haenjes-bscheuch/sails-hook-winston-logger.git",
+    "gitCommittish": null
   },
-  "keywords": [
-    "sailsjs",
-    "winston",
-    "sails@0.12"
+  "_requiredBy": [
+    "#USER",
+    "/"
   ],
-  "author": "Björn Scheuch",
-  "license": "MIT",
+  "_resolved": "git+https://github.com/haenjes-bscheuch/sails-hook-winston-logger.git#240e04f6e474bd163093c79659fc052a7f417893",
+  "_spec": "https://github.com/haenjes-bscheuch/sails-hook-winston-logger",
+  "_where": "/mnt/lingames/developer/anthem/Overlay_2/overlay_2_sails",
+  "author": {
+    "name": "Björn Scheuch"
+  },
   "bugs": {
     "url": "https://github.com/redcon-bscheuch/sails-hook-winston-logger/issues"
   },
-  "homepage": "https://github.com/redcon-bscheuch/sails-hook-winston-logger#readme",
+  "bundleDependencies": false,
   "dependencies": {
     "lodash": "^3.9.3",
     "mkdirp": "^0.5.1",
     "winston": "^2.0.0",
-    "winston-cloudwatch": "^1.0.0"
+    "winston-cloudwatch": "^1.0.0",
+    "winston-daily-rotate-file": "^3.10.0"
   },
+  "deprecated": false,
+  "description": "Fork of sails-hook-winston-logger for sailsjs 0.12",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-mocha-test": "^0.12.7",
     "mocha": "^2.2.5",
     "sails": "^0.11.0"
   },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "homepage": "https://github.com/redcon-bscheuch/sails-hook-winston-logger#readme",
+  "keywords": [
+    "sailsjs",
+    "winston",
+    "sails@0.12"
+  ],
+  "license": "MIT",
+  "main": "lib/logger.js",
+  "name": "@bscheuch/sails-hook-winston-logger",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/redcon-bscheuch/sails-hook-winston-logger.git"
+  },
   "sails": {
     "isHook": true
-  }
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "version": "0.0.2"
 }
